Fix scrollbars and logic for showing support button

--- a/app/assets/stylesheets/campaign.scss
+++ b/app/assets/stylesheets/campaign.scss
@@ -95,7 +95,7 @@
   }
 
   .info {
-    padding: 15px;
+    padding: 13px;
   }
 
   .image-tag {
